--- a/Extensão/index.html
+++ b/Extensão/index.html
@@ -8,20 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header class="menu">
-    <nav class="nav-menu">
+    <nav class="nav_menu">
 
         <div class="logo_menu">
-            <img src="" alt="">
+            <img src="img/logo_extensao.png" alt="lgo menu">
+            <h1>logo_menu</h1>
 
         </div>
 
-        <ul>
-            <li>Home</li>
-            <li>Mapa</li>
-            <li>Reclamações</li>
-            <li>Relatórios</li>
-            <li>Perfil</li>
-            <li>Sair</li>
+        <ul class="menu_lista">
+            <li><a href="">Home</a></li>
+            <li><a href="">Mapa</a></li>
+            <li><a href="">Reclamações</a></li>
+            <li><a href="">Relatórios</a></li>
+            <li><a href="">Perfil</a></li>
+            <li><a href="">Sair</a></li>
         </ul>
    </nav>
 </header>
