--- a/teste/index.html
+++ b/teste/index.html
@@ -27,7 +27,7 @@
       <div class="campo">
         <label for="data-emissao">
           <span class="icone">📅</span> 
-          <input type="date" id="data-emissao" name="data-emissao" value="2025-05-01" />
+          <input type="date" id="data-emissao" name="data-emissao" value="" />
          </label>
       </div>
 
@@ -35,7 +35,7 @@
       <div class="campo">
         <label for="data-final">
           <span class="icone">📅</span> 
-          <input type="date" id="data-final" name="data-final" value="2025-05-31" />
+          <input type="date" id="data-final" name="data-final" value="" />
         </label>
       </div>
 
