tela de Gerar Relatório
Feito

--- a/teste/index.html
+++ b/teste/index.html
@@ -11,11 +11,11 @@
   <header>
     <div class="menu_container">
       <img src="logo_extensao.png" alt="Prefeitura de Ponta Porã" id="logo" />
-      <div class="div_sair">
+      <a href="#" class="div_sair">
         <img src="logout.png" alt="Sair" id="IconSair" />
         <h1 id="txt_sair">Sair</h1>
 
-      </div>
+      </a href="">
       
     </div>
     <nav>
@@ -33,7 +33,7 @@
       <!-- Data de emissão do relatório -->
       <div class="campo">
         <label for="data-emissao">
-          <span class="icone">início</span> 
+          <span class="icone">Início</span> 
           <input type="date" id="data-emissao" name="data-emissao" value="" />
          </label>
       </div>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="botoes">
-        <button type="reset" class="btn-amarelo">Limpar</button>
+        <button type="reset" class="btn-amarelo">Limpar Filtro</button>
         <button type="submit" class="btn-verde">Gerar Relatório</button>
       </div>
     </form>
