--- a/teste/index.html
+++ b/teste/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="menu_container">
       <img src="logo_extensao.png" alt="Prefeitura de Ponta Porã" id="logo" />
-      <a href="#" class="div_sair">
+      <a href="#" class="sair">
         <img src="logout.png" alt="Sair" id="IconSair" />
         <h1 id="txt_sair">Sair</h1>
 
@@ -22,7 +22,7 @@
       <a href="#">Home</a>
       <a href="#">Mapa</a>
       <a href="#">Reclamações</a>
-      <a href="#" class="ativo">Relatórios</a>
+      <a href="#" class="ativo">Relatório</a>
     </nav>
   </header>
 
