--- a/teste/pages/form_relatorio.html
+++ b/teste/pages/form_relatorio.html
@@ -4,27 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gerar Relatório</title>
-  <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="/teste/style/form_relatorio.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <header>
+<header>
     <div class="menu_container">
-      <img src="logo_extensao.png" alt="Prefeitura de Ponta Porã" id="logo" />
+      <img src="/teste/img/logo_extensao.png" alt="Prefeitura de Ponta Porã" id="logo" />
       <a href="#" class="sair">
-        <img src="logout.png" alt="Sair" id="IconSair" />
+        <img src="/teste/img/logout.png" alt="Sair" id="IconSair" />
         <h1 id="txt_sair">Sair</h1>
-
-      </a href="">
-      
+      </a>
     </div>
     <nav>
-      <a href="#">Home</a>
+      <a href="">Home</a>
       <a href="#">Mapa</a>
-      <a href="#">Reclamações</a>
-      <a href="#" class="ativo">Relatório</a>
+      <a href="">Reclamações</a>
+      <a href="/teste/pages/relatorio.html">Relatório</a>
     </nav>
   </header>
+<body>
+  
 
   <main>
     <form class="formulario" action="#" method="get">
@@ -86,7 +85,7 @@
   </main>
 
   <footer>
-    <img src="logo_extensao.png" alt="Prefeitura de Ponta Porã" class="logo-footer" />
+    <img src="/teste/img/logo_extensao.png" alt="Prefeitura de Ponta Porã" class="logo-footer" />
   </footer>
 </body>
 </html>
