--- a/teste/pages/form_relatorio.html
+++ b/teste/pages/form_relatorio.html
@@ -78,8 +78,8 @@
       </div>
 
       <div class="botoes">
-        <button type="reset" class="btn-amarelo">Limpar Filtro</button>
-        <button type="submit" class="btn-verde">Gerar Relatório</button>
+        <button href="#" type="reset" class="btn-amarelo">Limpar Filtro</button>
+        <a href="/teste/pages/relatorio.html" class="btn-verde">Gerar Relatório</a>
       </div>
     </form>
   </main>
