--- a/teste/pages/relatorio.html
+++ b/teste/pages/relatorio.html
@@ -25,7 +25,7 @@
         <a href="#">Home</a>
         <a href="#">Mapa</a>
         <a href="#">Reclamações</a>
-        <a class="ativo" href="#">Relatórios</a>
+        <a class="ativo" href="/teste/pages/form_relatorio.html">Relatórios</a>
     </nav>
     <a href="relatorio.pdf" class="btn-download" download title="Baixar Relatório PDF">
         ⬇️
